# compufactorio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base64.h  example-config.toml  main.cpp  package.json  pnpm-lock.yaml  react-router.config.ts  sfml.h  tests.h  toml.h  tsconfig.json  util.h  vite.config.ts
app/: app.css  one-dark-pro.json  root.tsx
app/components/: code-editor.tsx  theme-provider.tsx
app/routes/: home.tsx
blueprint/: blueprint.h  tiler.h  types.h
blueprint/objects/: clock-tile.json  tile.json
lang/: ast.h  lib.ts  parser.h  signals.ts  syntax.ts  transpiler.h  type_checker.h  types.h  variable.ts
lang/completion/: signal-completion.ts  type-completions.ts
tests/: ast_test.h  blueprint_test.h  parser_test.h  type_checker_test.h
